manifests/2.dev-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-dev1
  name: nginx-dev1
  namespace: dev-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-dev1
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx-dev1
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/usr/share/nginx/html/"
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: dev1-nfs-claim
status: {}
