manifests/3.dev-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-dev1-loadbalancer-service
  labels:
    app: nginx-dev1
    tier: frontend
  namespace: dev-1
spec:
  type: ClusterIP # LoadBalancer # ClusterIp, # NodePort
  selector:
    app: nginx-dev1
  ports:
  - name: http
    port: 8080 # Service Port
    targetPort: 80 # Container Port
