manifests/4.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev1-nginx-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: dev-1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-dev1-loadbalancer-service
            port:
              number: 8080
